--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,22 +2,13 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
   <title>Login</title>
-  <meta charset="UTF-8" />
 </head>
 <body>
 <h1>Login</h1>
 <form th:action="@{/login}" method="post">
-  <div>
-    <label>Username:</label>
-    <input type="text" name="username" />
-  </div>
-  <div>
-    <label>Password:</label>
-    <input type="password" name="password" />
-  </div>
-  <div>
-    <button type="submit">Login</button>
-  </div>
+  <div>Username: <input type="text" name="username" /></div>
+  <div>Password: <input type="password" name="password" /></div>
+  <button type="submit">Login</button>
 </form>
 </body>
 </html>
